--- a/app.json
+++ b/app.json
@@ -20,12 +20,13 @@
     },
     "OWNER_ID": {
       "description": "Masukan User ID Telegram untuk Owner BOT",
-      "value": "1436578278",
+      "value": "",
       "required": false
     },
     "ADMINS": {
       "description": "Masukan User ID untuk mendapatkan hak Admin BOT [Hanya dapat membuat link]",
-      "value": "1436578278"
+      "value": ""
+      "required": false
     },
     "APP_ID": {
       "description": "Dapatkan APP ID di web my.telegram.org",
