--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
     },
     "ADMINS": {
       "description": "Masukan User ID untuk mendapatkan hak Admin BOT [Hanya dapat membuat link]",
-      "value": ""
+      "value": "",
       "required": false
     },
     "APP_ID": {
