--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     },
     "OWNER_ID": {
       "description": "Masukan User ID Telegram untuk Owner BOT",
-      "value": "",
+      "value": "1234567890",
       "required": false
     },
     "ADMINS": {
